--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "props-type": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
